<resources>
    <string name="app_name">HERO</string>
    <string name="daily_title">Daily Use</string>
    <string name="stretch_title">Stretch</string>
    <string name="exercs_title">Exercise</string>
    <string name="results_title">Results</string>
    <string name="reps_title">Reps</string>
    <string name="duse_title">Daily Use</string>
    <string name="button_init_title">Press to turn on</string>
    <string name="flex_title">Flexion</string>
    <string name="exten_title">Extension</string>
    <string name="hold_title">Hold Time</string>
    <string name="email_title">Talk to Physician</string>
    <string name="speed_title">Speed</string>
    <string name="battery_message">HERO battery:</string>
    <string name="title_activity_authentication">Authentication</string>
    <string name="title_activity_voice_control_no_words">VoiceControlNoWords</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="max_grasps">300</string>
</resources>
